<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.seletivo</groupId>
		<artifactId>seletivo</artifactId>
		<version>1.0.0</version>
	</parent>
	<artifactId>domain</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>domain</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<!--		<dependency>-->
		<!--			<groupId>org.junit.jupiter</groupId>-->
		<!--			<artifactId>junit-jupiter-api</artifactId>-->
		<!--			<version>5.12.1</version>-->
		<!--			<scope>test</scope>-->
		<!--		</dependency>-->
	</dependencies>
</project>
